--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 Actuellement stagiaire chez AISET, forte de 3 ans d'expérience chez ControlParks (Gestion de la flotte Total Togo), je combine conception logicielle (UML, MCD) et décisionnelle (ETL, Cubes OLAP) pour devenir Data Engineer.
             </p>
             <div class="mt-8 flex justify-center gap-4">
-                <a href="https://github.com/VOTRE-PSEUDO" class="bg-blue-600 text-white px-6 py-2 rounded-full font-bold hover:bg-blue-500 transition shadow-lg"><i class="fab fa-github mr-2"></i>GitHub</a>
+                <a href="https://github.com/clotilde98" class="bg-blue-600 text-white px-6 py-2 rounded-full font-bold hover:bg-blue-500 transition shadow-lg"><i class="fab fa-github mr-2"></i>GitHub</a>
                 <a href="mailto:clotildesemeha@gmail.com" class="border border-white px-6 py-2 rounded-full font-bold hover:bg-white hover:text-slate-900 transition"><i class="fas fa-envelope mr-2"></i>Contact</a>
             </div>
         </div>
@@ -134,4 +134,5 @@
     </footer>
 
 </body>
+
 </html>
